--- a/index.html
+++ b/index.html
@@ -12,7 +12,19 @@
     
     <article class="main">
 
-        <section class="job-description">
+        <section class="home d-flex justify-content-center align-items-center">
+            <video autoplay loop muted plays-inline>
+                <source src="./image/0810.mp4" type="video/mp4">
+            </video>
+            <div class="img-container text-center">
+                <h6 class="fw-bold text-dark">Scroll Down</h6>
+                <a href="#job_description" class="">
+                    <img src="./image/mouse effect.svg" alt="" class="mouse-effect pulse">
+                </a>
+            </div>
+        </section>
+
+        <section class="job-description" id="job_description">
             <div class="container pt-5 pb-5 pb-lg-0">
                 <h2 class="title text-center fw-bold text-white">Jobs in Our Company</h2>
                 <h5 class="info text-center fw-bold text-white pb-3">Required position in our company</h5>
