--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="card-container d-flex justify-content-center align-items-center flex-wrap mt-5">
                     <div class="col-12 col-xl-6 pe-0 pe-xl-3">
                         <div class="d-flex justify-content-center justify-content-xl-end flex-wrap gap-3">
-                            <div class="card">
+                            <div class="card card-1">
                                 <div class="step text-white">
                                     <h5 class="text-center fw-bold py-3 m-0">Step 1</h5>
                                 </div>
@@ -81,7 +81,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="card">
+                            <div class="card card-2">
                                 <div class="step text-white">
                                     <h5 class="text-center fw-bold py-3 m-0">Step 2</h5>
                                 </div>
@@ -101,7 +101,7 @@
                     </div>
                     <div class="col-12 col-xl-6 mt-3 mt-xl-0">
                         <div class="d-flex justify-content-center justify-content-xl-start flex-wrap gap-3">
-                            <div class="card">
+                            <div class="card card-3">
                                 <div class="step text-white">
                                     <h5 class="text-center fw-bold py-3 m-0">Step 3</h5>
                                 </div>
@@ -117,7 +117,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="card">
+                            <div class="card card-4">
                                 <div class="step text-white">
                                     <h5 class="text-center fw-bold py-3 m-0">Step 4</h5>
                                 </div>
